--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,13 +7,13 @@ header, .post:not(:last-child) {
   border: none;
   padding: 0;
   cursor: pointer;
-  color: #1b89bc;
+  color: #260202;
   text-decoration: none;
   font-size: 100%;
 }
 
 .no-button:hover {
-  color: #065b83;
+  color: #5f0606;
   text-decoration: underline;
 }
 
