--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Post!</title>
+  <title>The Tech Blog</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -13,20 +13,20 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">My Post!</a>
-      </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
+        <a href="/">Home</a> |
+                <a href="/profile">Dashboard</a> |
+                 <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
-      </nav>
+      </h1>
+      
     </header>
-    <main class="container container-fluid mt-5">
+    <h2>The Tech Blog</h2>
+
+    <main class="container container-fluid mt-5">  
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
