--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,9 +1,9 @@
-<div class="text-center">
+<div>
   <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
   <p>{{description}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
-    <button class="btn btn-primary">my Post!</button>
+    <input type="text">
+    <button class="btn btn-primary">Submit</button>
   </p>
 </div>
