--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -33,6 +33,9 @@
         <h4><a href="/post/{{post.id}}">{{post.name}}</a></h4>
       </div>
       <div class="col-md-4">
+        <button class="btn btn-sm" data-id="{{post.id}}">UPDATE</button>
+      </div>
+      <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
       </div>
     </div>
